# zero2prod-in-rust

./: .dockerignore  Cargo.toml  Dockerfile  bacon.toml  render.yaml
configuration/: base.yaml  docker.yaml  local.yaml  production.yaml
migrations/: 20260526111500_add_subscription_status_and_tokens.sql  20260528100000_create_users_table.sql  20260528110000_create_idempotency_and_newsletter_queue_tables.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: admin.rs  mod.rs  newsletters.rs  subscriptions.rs
tests/: api.rs  health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs
